--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -525,10 +525,7 @@
         </label>
     </form>
     <br>
-    <Br>
-    <Br>
-    <a id="lcdu" class="disabled" onclick="lcdu();"><i class="fa-solid fa-tag"></i> Label Time Units <span class="betatag">BEING UPDATED</span></a>
-    <a id="aaaaaaaa" class="disabled"><i class="fa-solid fa-hand"></i> Disable Animations <span class="betatag">BETA</span></a>
+    <a id="lcdu" class="disabled" onclick="lcdu();"><i class="fa-solid fa-tag"></i> Label Time Units</a>
     <a id="coce" class="disabled" onclick="coce();"><i class="fa-solid fa-cake-candles"></i> Disable Confetti</a>
     <br>
     <Br>
