--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -5145,7 +5145,7 @@ let schedule_events = [];
                     document.getElementById('schedule-timeRemaining').textContent = `${minutesUntilStart}:${secondsUntilStart.toString().padStart(2, '0')}`;
                     document.getElementById('schedule-remainingText').textContent = 'starting';
                     document.getElementById('schedule-progress').style.width = '0%';
-                    document.title = "Countdown Schedule Starting Soon";
+                    document.title = "Event Starting Soon";
                 } else {
                     const remainingTime = currentEvent.endTime - now;
                     const totalDuration = currentEvent.endTime - currentEvent.startTime;
@@ -5156,7 +5156,11 @@ let schedule_events = [];
                     const seconds = Math.floor((remainingTime % 60000) / 1000);
                     document.getElementById('schedule-timeRemaining').textContent = `${minutes}:${seconds.toString().padStart(2, '0')}`;
                     document.getElementById('schedule-remainingText').textContent = 'remaining';
-		    document.title = currentEvent.title + " | " + Math.round(remainingTime/60000) + " mins remaining";
+			if(Math.round(remainingTime/60000) > 1){
+		    		document.title = currentEvent.title + " | " + Math.round(remainingTime/60000) + " mins remaining";
+                	}else{
+				document.title = currentEvent.title + " | " + Math.round(remainingTime/60000) + " min remaining";
+			}
                 }
             } else {
                 schedule_showTomorrowSchedule();
