--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -3080,14 +3080,14 @@ window.onload = function() {
 	function autopilotsparkle(event) {
 const create_sparkle = (x, y) => {
         const sparkle = document.createElement('div');
-        sparkle.innerHTML = `
+                sparkle.innerHTML = `
             <svg viewBox="0 0 100 100" width="20" height="20">
                 <path d="M50 0 L60 40 L100 50 L60 60 L50 100 L40 60 L0 50 L40 40 Z" 
                       fill="url(#grad)" />
                 <defs>
                     <linearGradient id="grad" x1="0%" y1="0%" x2="0%" y2="100%">
-                        <stop offset="0%" style="stop-color: #FFD700; stop-opacity:1" />
-                        <stop offset="100%" style="stop-color: #FF4500; stop-opacity:1" />
+                        <stop offset="0%" style="stop-color: #00FF5E; stop-opacity:1" />
+                        <stop offset="100%" style="stop-color: #03a662; stop-opacity:1" />
                     </linearGradient>
                 </defs>
             </svg>
