--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -3618,10 +3618,14 @@ const create_sparkle = (x, y) => {
 
         var distance = countDownDate - now;
 
-        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+	function formatZeroesofNumber(num) {
+    		return num < 10 ? '0' + num : num;
+	}
+	
+        var days = formatZeroesofNumber(Math.floor(distance / (1000 * 60 * 60 * 24)));
+        var hours = formatZeroesofNumber(Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)));
+        var minutes = formatZeroesofNumber(Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60)));
+        var seconds = formatZeroesofNumber(Math.floor((distance % (1000 * 60)) / 1000));
 
 
         if(parameter("schedule") == "null"){ //will only trigger when there is no schedule active. schedule titles are handled with the cdschedule code.
