--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -2923,7 +2923,7 @@ if(parameter('progress')){
         else if (decodeURIComponent(parameter('typeface')) == "Yeseva One") {
             FontDMSerif('auto'); //fallback for old depreciated font option Yeseva, replaced by DM Serif Display
         }
-        else if (decodeURIComponent(parameter('typeface')) == "DMSerif") {
+        else if (decodeURIComponent(parameter('typeface')) == "DM Serif Display") {
             FontDMSerif('auto');
         }
         else if (decodeURIComponent(parameter('typeface')) == "Orbitron") {
