--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -579,7 +579,7 @@
             <div id="autopilotinfo" style="margin-left: 60px;">
                 <h3 style="position: relative; display: inline-block; background-color: white; border-radius: 20px; padding: 5px 10px 5px 10px;">
                     <span style="color: #11371f;">
-                        AUTOPILOT
+                        <i class="fa-solid fa-compass"></i> AUTOPILOT
                     </span>
                 </h3>
                 <h1 id="autopilotprediction" style="line-height:0.000001">Finding...</h1>
@@ -601,7 +601,7 @@
             <div id="autopilotinfomobile" style="margin-left: 60px;">
                 <h3 style="position: relative; display: inline-block; background-color: white; border-radius: 20px; padding: 5px 10px 5px 10px;">
                     <span style="color: #11371f;">
-                        AUTOPILOT
+                        <i class="fa-solid fa-compass"></i> AUTOPILOT
                     </span>
                 </h3>
                 <h1 id="autopilotpredictionmobile" style="line-height:0.000001">Finding...</h1>
