--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -255,7 +255,7 @@
                     <div class="icon"><i id="left" class="fa-solid fa-angle-left"></i></div>
                     <ul class="tabs-box" id="tabs-box">
                         <!--<li id="customtab" class="tab active">Custom</li>-->
-                        <li title="Automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event);"><i class="fa-solid fa-wand-magic-sparkles"></i> Autopilot</li>
+                        <li title="Automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event);"><i class="fa-solid fa-compass"></i> Autopilot</li>
                         <li id="endtab" class="mcatab" onclick="MES();">MCA</li>
                         <li id="nydtab" class="tab" onclick="NYD();">New Year's Day</li>
                         <li id="vdtab" class="tab" onclick="VD();">Valentine's Day</li>
