--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -26,7 +26,7 @@
     <script src="Dependencies/confetti.js"></script>
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
 
-    <meta property="og:image" content="https://michaeldors.com/Images/countdowncover.jpg" />
+    <meta property="og:image" content="https://michaeldors.com/mcacountdown/defaultshare.png" />
     <meta property="og:title" content="Countdown - Michael Dors" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://michaeldors.com/mcacountdown/timer" />
@@ -3456,6 +3456,10 @@ const create_sparkle = (x, y) => {
         }
         else{
             document.querySelector('meta[property="og:title"]').setAttribute('content', 'Countdown - Michael Dors');
+        }
+
+        if(countDownDate.getMonth() === 11 && countDownDate.getDate() === 25) { // December is month 11 (0-based)
+            document.querySelector('meta[property="og:image"]').setAttribute('content', 'https://michaeldors.com/mcacountdown/christmasshare.png');
         }
 
         if(!confettiType){
