--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -401,7 +401,7 @@ body {
     padding: 0;
     background-color: #141414;
     
-    background-image: url("Backgrounds/dashboardbg.png") !important;
+    /*background-image: url("Backgrounds/dashboardbg.png") !important;*/
     background-size: cover; /* Ensure the image covers the entire background */
     background-position:bottom center;
     background-attachment:fixed;
