--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -459,7 +459,7 @@ button:hover {
     color:white;
     border-radius: 8px;
     overflow: hidden;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.45);
     cursor: pointer;
     position: relative;
     display: flex;
@@ -485,16 +485,17 @@ button:hover {
     position: absolute;
     bottom: 15px;
     right: 15px;
-    background-color: #ff4444;
+    background-color: #ff5353;
     color: white;
     border: none;
     border-radius: 4px;
     padding: 5px 10px;
     cursor: pointer;
+	transition:0.3s all;
 }
 
 .remove-button:hover {
-    background-color: #cc0000;
+    background-color: #d00000;
 }
 
 iframe {
