--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -476,8 +476,10 @@ button:hover {
 }
 
 .card h3 {
-    margin: 0;
-    padding-right: 30px;
+    position: absolute;
+    bottom: 15px;
+    left: 15px;
+	margin: 0;
     font-family: 'Dosis' , sans-serif;
 }
 
