--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -480,6 +480,7 @@ button:hover {
     bottom: 15px;
     left: 15px;
 	margin: 0;
+	padding-right:30px;
     font-family: 'Dosis' , sans-serif;
 }
 
