--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -453,6 +453,7 @@ button:hover {
 }
 
 .card {
+height:200px;
     background: rgba(40, 40, 40, 0.5);
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
