--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -453,7 +453,6 @@ button:hover {
 }
 
 .card {
-height:200px;
     background: rgba(40, 40, 40, 0.5);
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
@@ -483,6 +482,7 @@ height:200px;
 	margin: 0;
 	padding-right:30px;
     font-family: 'Dosis' , sans-serif;
+	padding-top:20px;
 }
 
 .remove-button {
