--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -482,7 +482,7 @@ button:hover {
 	margin: 0;
 	padding-right:30px;
     font-family: 'Dosis' , sans-serif;
-	padding-top:500px;
+	margin-top:100px;
 }
 
 .remove-button {
