--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -634,6 +634,7 @@ button:hover {
     overflow: visible;
     perspective: 1000px;
     transform-origin: center;
+    backface-visibility: hidden;
 }
 
 .card.currentlybeingdeleted{
