--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -558,6 +558,7 @@ body {
     background-position:bottom center;
     background-attachment:fixed;
     background-repeat: no-repeat; /* Prevent the image from repeating */
+    user-select: none;
 }
 
 .container {
