--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -643,6 +643,7 @@ button:hover {
     overflow: visible;
     transform-origin: center;
     backface-visibility:visible;
+perspective:3000;
 }
 
 .card.currentlybeingdeleted{
