--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -637,8 +637,13 @@ button:hover {
 }
 
 .card.dragging-over-trash {
-    transform:rotate3d(0,1,0,-60deg) rotate(75deg) scale(0.5);
+    transform: rotate3d(0, 1, 0, -60deg) rotate(75deg) scale(0.5);
     background: rgba(255, 83, 83, 0.5);
+    z-index: 4000;
+    overflow: visible;
+    transform-origin: center;
+    backface-visibility:visible;
+perspective:1000;
 }
 
 .card.currentlybeingdeleted{
