--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -638,6 +638,7 @@ button:hover {
 
 .card.dragging-over-trash {
     transform: rotate3d(0, 1, 0, -60deg) rotate(75deg) scale(0.5);
+-webkit-transform: rotate3d(0, 1, 0, -60deg) rotate(75deg) scale(0.5);
     background: rgba(255, 83, 83, 0.5);
     z-index: 4000;
     overflow: visible;
