--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -642,19 +642,17 @@ button:hover {
     z-index: 4000;
     overflow: visible;
     transform-origin: center;
-    backface-visibility:visible;
-perspective:1000;
+    backface-visibility: visible;
+    perspective: 1000;
 }
 
-@supports (-webkit-transform: rotate3d(0, 1, 0, -60deg)) {
+@supports (-webkit-transform: rotate(75deg)) {
     .card.dragging-over-trash {
-        transform: rotate(75deg) scale(0.5); /* WebKit-specific rule */
-	background: rgba(255, 83, 83, 0.5);
-    z-index: 4000;
-    overflow: visible;
-    transform-origin: center;
+        -webkit-transform: rotate(75deg) scale(0.5);
+        transform: rotate(75deg) scale(0.5);
     }
 }
+
 
 .card.currentlybeingdeleted{
     transform: scale(0.8) !important;
