--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -69,6 +69,7 @@
 
 // Check if the browser is WebKit-based
 const isWebKit = 'WebkitAppearance' in document.documentElement.style;
+	    alert(isWebKit);
 
 // Create a <style> tag
 let dynamicStyle = document.createElement('style');
