--- a/projects.html
+++ b/projects.html
@@ -201,6 +201,15 @@ document.head.appendChild(script);
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://instagram.com/michaeldors_/">Request Follow</a>
         </section>
+        <section class="projectarea" data-projecttype="website">
+            <h1 data-aos="fade-up">Afterparty</h1>
+            <h2 data-aos="fade-up">Website</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/afterparty.png" />
+            <p data-aos="fade-up">
+                A fictional news company webpage
+            </p>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://michaeldors.com/AFTRPRTY">Read All About It</a>
+        </section>
         <section class="projectarea" data-projecttype="shortcut">
             <h1 data-aos="fade-up">Gradual</h1>
             <h2 data-aos="fade-up">Siri Shortcut</h2>
